Fix mobile menu close button spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -98,11 +98,9 @@ body {
         }
 
         .menu-close-item {
-                position: absolute;
-                left: 0;
                 width: 100%;
-                transform: translateY(-50%);
                 text-align: center;
+                margin-bottom: 1em;
         }
 
         .menu-close {
